chore: bump deps; node v22

--- a/package.json
+++ b/package.json
@@ -30,18 +30,18 @@
         "module": "commonjs"
     },
     "devDependencies": {
-        "@onivoro/cli": "*",
+        "@onivoro/cli": "^22.0.3",
         "@types/jest": "*",
-        "@types/node": "18.19.1",
+        "@types/node": "22.7.9",
         "typescript": "*"
     },
     "engines": {
-        "node": "18.19.1",
-        "npm": "10.2.4"
+        "node": "22.10.0",
+        "npm": "10.9.0"
     },
     "dependencies": {
-        "@nestjs/common": "^10.3.3",
-        "@onivoro/server-common": "^0.1.1",
-        "@sendgrid/mail": "^8.1.1"
+        "@nestjs/common": "^10.4.6",
+        "@onivoro/server-common": "^22.0.0",
+        "@sendgrid/mail": "^8.1.4"
     }
 }
